[tool.poetry]
authors = ["Niko Ehrenfeuchter <nikolaus.ehrenfeuchter@unibas.ch>"]
description = "Prometheus metrics collector for the Huygens Remote Manager (HRM)."
keywords = ["hrm", "huygens", "prometheus", "metrics", "monitoring"]
license = "GPLv3"
name = "hrm-prometheus"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
PyMySQL = "^1.0.2"
SQLAlchemy = "^1.4.35"
loguru = "^0.6.0"
prometheus-client = "^0.14.1"
python = "^3.6.2"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pylint = "^2.13.7"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
